# eguitest

./: Cargo.toml  build_web.sh  start_server.sh
docs/: eguitest.wasm  index.html
src/: main.rs
