[package]
name = "eguitest"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.15.0"
egui-miniquad = { path = "../egui-miniquad" }
miniquad = "=0.3.0-alpha.37"
egui_demo_lib = { version = "0.15.0", default-features = false }
glam = "0.19"

[profile.release]
opt-level = 2
